# aireview

./: README.md  docker-compose.yaml  pyproject.toml
pipelines/: aireview_pipeline.py
pipelines/aireview/: agents.py  requirements.txt  retrieval.py
