[tool.poetry]
name = "aireview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
python-dotenv = "^1.0.1"
qdrant-client = "^1.12.0"
langchain-qdrant = "^0.1.4"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.35"
langfuse = "^2.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
